<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@color/background">

    <ImageButton
        android:id="@+id/burger"
        android:layout_width="24dp"
        android:layout_height="22dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/burger"
        android:background="@color/transparent"
        tools:ignore="contentdescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_black"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:letterSpacing="0.025"
        android:textSize="@dimen/very_big_size"
        app:layout_constraintBottom_toBottomOf="@+id/burger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/burger" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/burger"
        app:srcCompat="@drawable/top_line"
        tools:ignore="contentdescription"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userAvatar"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="25dp"
        app:strokeColor="@color/red"
        app:strokeWidth="@dimen/width_2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"/>

    <TextView
        android:id="@+id/changeUserAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/change_profile_picture"
        android:textSize="@dimen/normal_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userAvatar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="53dp"
        android:autofillHints="username"
        android:enabled="false"
        android:textColor="@color/white"
        android:fontFamily="@font/saira_semibold"
        android:textSize="@dimen/above_normal_size"
        android:background="@drawable/user_data_background"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/default_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeUserAvatar" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/edit"
        android:background="#F000"
        app:srcCompat="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText" />

    <TextView
        android:id="@+id/privacyPolicyButton"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/user_data_background"
        android:text="@string/privacy_policy"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="@dimen/above_normal_size"
        android:fontFamily="@font/saira_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:drawableEndCompat="@drawable/follow" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="162.47dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/aviator_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>