<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@color/background">

    <ImageView
        android:id="@+id/burger"
        android:layout_width="24dp"
        android:layout_height="22dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/burger"
        tools:ignore="contentdescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_black"
        android:text="@string/app_menu"
        android:textAllCaps="true"
        android:letterSpacing="0.025"
        android:textSize="@dimen/very_big_size"
        app:layout_constraintBottom_toBottomOf="@+id/burger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/burger" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/burger"
        app:srcCompat="@drawable/top_line"
        tools:ignore="contentdescription"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gameButton"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="8dp"
            android:text="@string/game"
            android:gravity="start|center_vertical"
            android:textAllCaps="false"
            android:fontFamily="@font/saira_semibold"
            android:drawablePadding="16dp"
            android:paddingHorizontal="18dp"
            android:drawableStart="@drawable/gamepad"
            android:background="@drawable/button_ripple" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/scoreLeadersButton"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="8dp"
            android:text="@string/score_leaders"
            android:gravity="start|center_vertical"
            android:textAllCaps="false"
            android:fontFamily="@font/saira_semibold"
            android:drawablePadding="16dp"
            android:paddingHorizontal="18dp"
            android:drawableStart="@drawable/score_leaders"
            android:background="@drawable/button_ripple" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/settings"
            android:gravity="start|center_vertical"
            android:textAllCaps="false"
            android:fontFamily="@font/saira_semibold"
            android:drawablePadding="16dp"
            android:paddingHorizontal="18dp"
            android:drawableStart="@drawable/settings"
            android:background="@drawable/button_ripple" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="162.47dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/aviator_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>